--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-# PHP #
+# PHP
 vendor
 vendor/
 /vendor/
 .phpunit.result.cache
 
-# Node - React #
+# Node - React
 node_modules/
 npm-debug.log
 yarn-error.log
@@ -16,10 +16,10 @@ yarn-error.log
 __pycache__
 media
 
-# Backup files #
+# Backup files
 *.bak
 
-# Python #
+# Python
 *.py[cod]
 *$py.class
 
@@ -90,7 +90,7 @@ Control.ca-bundle
 Control.system-ca-bundle
 GitHub.sublime-settings
 
-# Visual Studio Code #
+# Visual Studio Code
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -110,3 +110,6 @@ _local_settings.py
 gunicorn-error-log
 bin
 bin/
+
+# CPP
+*.out
